# studyforge

./: .gitignore  README.md  dev.db  pyproject.toml  realism_and_summ.db  test_consult.db  test_router.py
scripts/: seed.py  test_calendar.py  test_consultation.py  test_realism_and_summ.py
src/studyforge/: cli.py
src/studyforge/core/: chat_loop.py  consultation.py  realism.py  summary.py
src/studyforge/integrations/: calendar_client.py  calendar_sync.py
src/studyforge/llm/: router.py
src/studyforge/memory/: models.py  schema.sql  store.py
tests/: test_calendar.py  test_cli.py  test_consultation.py  test_memory_store.py  test_realism_and_summaries.py  test_router.py
