[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studyforge"
version = "0.1.0"
description = "An AI powered personal study coach" 
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
studyforge = "studyforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/studyforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
